src/objects/RWE_Data_Profiler__c.object
<CustomObject>
    <description>This is a master object for profiling multiple data asset</description>
    <fields>
        <fullName>Data_Asset_Name__c</fullName>
        <formula>RWE_Data_Asset_Profiler__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Asset Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Profiler_Link__c</fullName>
        <label>Data Profiler Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Data_Profiler__c</fullName>
        <label>Data Profiler Type</label>
        <picklist>
            <picklistValues>
                <fullName>Achilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>i2b2 Passport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incidence &amp; Prevalence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RWE_Data_Asset_Profiler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RWE Data Asset</label>
        <referenceTo>RWE_Data_Asset__c</referenceTo>
        <relationshipLabel>RWE Data Profilers</relationshipLabel>
        <relationshipName>RWE_Data_Profilers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RWE Data Profiler</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DPN-{0000}</displayFormat>
        <label>Data Profiler Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWE Data Profilers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>